--- a/Marvel.Android/Resources/layout/Login.axml
+++ b/Marvel.Android/Resources/layout/Login.axml
@@ -38,8 +38,8 @@
   <Button
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-      android:id="@+id/btnLogin"
-      android:text="@string/Login"
+      android:id="@+id/btnGetComics"
+      android:text="@string/GetComics"
       android:width="100dip"
       android:height="50dip" />
 </LinearLayout>
